--- a/index.html
+++ b/index.html
@@ -7,7 +7,69 @@
     <title>The Landing Page</title>
 </head>
 <body>
-    
+    <div class="header">
+        <div class="logo">
+            <img src="na" alt="Logo Placeholder">
+        </div>
+
+        <div class="nav-links">
+            <ul>
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </div>
+
+        <div class="text">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title.  It's smaller font the color is lower contrast</p>
+            <button type="button">Sign Up</button>
+        </div>
+
+        <div class="main-image">
+            <img src="na" alt="This is a placeholder for an image">
+        </div>
+    </div>
+
+    <div class="information">
+        <div class="title">
+            <p>Some random information.</p>
+        </div>
+
+        <div class="cardspace">
+            <div class="cards">
+                <img src="na" alt="placeholder">
+                <p>this is some subtext under the illustration or image</p>
+                <img src="na" alt="placeholder">
+                <p>this is some subtext under the illustration or image</p>
+                <img src="na" alt="placeholder">
+                <p>this is some subtext under the illustration or image</p>
+                <img src="na" alt="placeholder">
+                <p>this is some subtext under the illustration or image</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="testemonial">
+        <div class="quote">
+            <p>This is an inspiring quote, or a testimonial from a customer.  Maybe it's just filling up space, or maybe people will actually read it.  Who knows?  All I know is that it looks nice.</p>
+        </div>
+
+        <div class="author">
+            <p>-Thor, God of Thunder</p>
+        </div>
+    </div>
+
+    <div class="action">
+        <h1>Call to action!  It's time!</h1>
+        <p>Sign up for our product by clicking that button right over there</p>
+        <button type="button">Sign Up</button>
+    </div>
+
+    <div class="footer">
+        <p>Copyright © The Odin Project 2021</p>
+    </div>
+
 </body>
 </html>
 
