Style and add content to the headers

--- a/index.html
+++ b/index.html
@@ -4,30 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>The Landing Page</title>
 </head>
 <body>
     <div class="header">
-        <div class="logo">
-            <img src="na" alt="Logo Placeholder">
-        </div>
 
-        <div class="nav-links">
-            <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
-            </ul>
-        </div>
+        <div class="top-line">
+            <div class="logo">
+                <p>Awesome Beans Coffee</p>
+            </div>
 
-        <div class="text">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title.  It's smaller font the color is lower contrast</p>
-            <button type="button">Sign Up</button>
-        </div>
+            <div class="nav-links">
+                <ul>
+                    <li>Home</li>
+                    <li>Store</li>
+                    <li>About Us</li>
+                </ul>
+            </div>
+        </div>  
+        
+        <div class="header-middle">
+            <div class="text">
+                <h1>Try the best coffee in the world</h1>
+                <p>Roasted with care and consideration, our coffee is always within a week of roasting for the freshest, sweet taste of coffee.  No sugar needed.</p>
+                <button type="button">Shop</button>
+            </div>
 
-        <div class="main-image">
-            <img src="na" alt="This is a placeholder for an image">
+            <div class="main">
+                <img src="img/pexels-jason-villanueva-851555.jpg" alt="This is a placeholder for an image">
+            </div>
         </div>
     </div>
 
