--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="header-middle">
             <div class="text">
                 <h1>Try the best coffee in the world</h1>
-                <p>Roasted with care and consideration, our coffee is always within a week of roasting for the freshest, sweet taste of coffee.  No sugar needed.</p>
+                <p>Roasted with precision, our coffee is always within a week of roasting for the freshest tasting coffee.  No sugar needed.</p>
                 <button type="button">Shop</button>
             </div>
 
@@ -39,19 +39,25 @@
 
     <div class="information">
         <div class="title">
-            <p>Some random information.</p>
+            <p>The coffee process.</p>
         </div>
 
         <div class="cardspace">
-            <div class="cards">
-                <img src="na" alt="placeholder">
-                <p>this is some subtext under the illustration or image</p>
-                <img src="na" alt="placeholder">
-                <p>this is some subtext under the illustration or image</p>
-                <img src="na" alt="placeholder">
-                <p>this is some subtext under the illustration or image</p>
-                <img src="na" alt="placeholder">
-                <p>this is some subtext under the illustration or image</p>
+            <div class="cards card1">
+                <img src="./img/pexels-adam-lukac-773958.jpg" alt="placeholder">
+                <p>Coffee is roasted fresh every other day</p>
+            </div>   
+            <div class="cards card2">
+                <img src="./img/pexels-chevanon-photography-302902.jpg" alt="placeholder">
+                <p>Our expert baristas craft the perfect drink</p>
+            </div>
+            <div class="cards card3">
+                <img src="./img/pexels-eyad-tariq-3879495.jpg" alt="placeholder">
+                <p>Enjoy drink in our cozy cafe with a book</p>
+            </div>
+            <div class="cards card4">
+                <img src="./img/pexels-bianca-gasparoto-1752806.jpg" alt="placeholder">
+                <p>Take the drink to a beautiful place</p>
             </div>
         </div>
     </div>
