Center the information section cards

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <div class="information">
         <div class="title">
-            <p>The coffee process.</p>
+            <p>Your coffee process.</p>
         </div>
 
         <div class="cardspace">
@@ -53,11 +53,11 @@
             </div>
             <div class="cards card3">
                 <img src="./img/pexels-eyad-tariq-3879495.jpg" alt="placeholder">
-                <p>Enjoy drink in our cozy cafe with a book</p>
+                <p>Enjoy your drink in our cozy cafe with a book</p>
             </div>
             <div class="cards card4">
                 <img src="./img/pexels-bianca-gasparoto-1752806.jpg" alt="placeholder">
-                <p>Take the drink to a beautiful place</p>
+                <p>Take your drink with you on a beautiful journey</p>
             </div>
         </div>
     </div>
