Style and add content to call to action section

--- a/index.html
+++ b/index.html
@@ -73,9 +73,14 @@
     </div>
 
     <div class="action">
-        <h1>Call to action!  It's time!</h1>
-        <p>Sign up for our product by clicking that button right over there</p>
-        <button type="button">Sign Up</button>
+        <div class="words">
+            <h1>Call to action!  It's time!</h1>
+            <p>Sign up for our product by clicking that button right over there</p>
+        </div>
+        
+        <div class="action-button">
+            <button type="button">Sign Up</button>
+        </div>
     </div>
 
     <div class="footer">
