Update header text

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="header-middle">
             <div class="text">
                 <h1>Try the best coffee in the world</h1>
-                <p>Roasted with precision, our coffee is always within a week of roasting for the freshest tasting coffee.  No sugar needed.</p>
+                <p>Roasted with precision, our coffee is always within a week of roasting for the freshest tasting coffee.</p>
                 <button type="button">Shop</button>
             </div>
 
